--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^16.18.74",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-dropzone": "^5.1.0",
+    "@types/react-easy-crop": "^2.0.0",
     "@types/react-redux": "^7.1.33",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
@@ -25,6 +27,8 @@
     "i18next-http-backend": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-easy-crop": "^5.0.6",
     "react-i18next": "^14.0.1",
     "react-redux": "^9.1.0",
     "react-router": "^6.21.3",
