--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
+    "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.6",
     "@mui/x-charts": "^7.0.0",
     "@mui/x-date-pickers": "^6.19.7",
@@ -20,11 +21,13 @@
     "@types/react-dropzone": "^5.1.0",
     "@types/react-easy-crop": "^2.0.0",
     "@types/react-redux": "^7.1.33",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "i18next": "^23.7.18",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -65,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-slick": "^0.23.13"
   }
 }
